Closed Bug 784255 Opened 12 years ago Closed 12 years ago

[b2g-bluetooth] devicefound event does not come up correctly

Categories

(Core :: DOM: Device Interfaces, defect)

ARM
Gonk (Firefox OS)
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla17

People

(Reporter: echou, Assigned: echou)

References

Details

Attachments

(1 file)

I tried to use latest code base to discovery devices nearby but failed. It's because GetProperty() in ParseProperties() returned false, so that aValue = props would not be executed and aValue would have no value. The root cause is there was a 'Type' property in devicefound event, but we were unable to recognize it because it didn't exist in sDeviceProperties. We have to update sDeviceProperties & sAdapterProperties to the same value as in Android ICS[1].

[1] See android_bluetooth_common.cpp for more information.
Assignee: nobody → echou
Forgot to mention, the issue happened on otoro.
Type is a newly added property of BlueZ (in ICS). Old version BlueZ won't be affected because we didn't delete or modify any existing properties.
Attachment #653649 - Flags: review?(kyle)
Comment on attachment 653649 [details] [diff] [review]
v1: Add property 'Type' to device and adapter property name list

Review of attachment 653649 [details] [diff] [review]:
-----------------------------------------------------------------

Looks good. Linked to bug 743933, which is other ICS dbus/bluez changes. I can't even start on that until the arm7 gb try target is gone though, so mainly just putting this here to note.
Attachment #653649 - Flags: review?(kyle) → review+
https://hg.mozilla.org/mozilla-central/rev/f9a8fdb08193
Status: NEW → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla17
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: