Bug 784255 - [b2g-bluetooth] devicefound event does not come up correctly, r=qdot